2004-11-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: added fallback for libgnomeprintui-enum-types.h.

	* gnomeprintui: imported.
